data/all_generated_tests/raw_wast_tests/call_indirect_StackCorruption_4039.wast
;; 8. **Mixed Valid and Invalid `call_indirect` Instructions**:    - Arrange for a mix of valid and invalid `call_indirect` instructions in a function sequence.    - Constraint Check: Ensure proper trapping and stack unwinding on encountering invalid `call_indirect`.    - Stack Corruption Relation: Improper handling of invalid calls might corrupt stack state before valid calls.

(assert_invalid
  (module
    (type (func (result i32)))
    (type (func (param i32) (result i32)))
    (table 2 funcref)
    (elem (i32.const 0) 0 1)
    (func (call_indirect (type 1) (i32.const 1))) 
    (func (call_indirect (type 0) (i32.const 2)))
  )
  "index out of bounds"
)